--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.19.0",
     "next": "10.0.7",
     "prismic-dom": "^2.2.5",
+    "prismic.io": "^3.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
